# a-fedora-appliance

./: .gitignore  COPYING  Makefile.am  README  a-fedora-appliance.spec.in  autogen.sh  boot-a-fedora-appliance.in  build-a-fedora-appliance.in  configure.ac  extra-find-requires.sh  firstboot  init  make.sh.in
